   * install.LyX
   * os.manage, os.shutdown, os.restart, os.hibernate, os.sleep, os.lock (set of functions to turn off the computer after simulation or the likes)

UPDATED FUNCTIONS:
   * install.Rtools - removed "latest_Frozen", added "check".  Made the function know which Rtools to install based on your R version (and if it is not known - it asks the user to choose a version)
   * Removed shutdown (turned into os.shutdown)


installR 0.8.5
--------------

NEW FUNCTIONS ADDED:
   * installr - allows the user to choose which software to install (from a GUI or console based menu system)
   * A new GUI for Rgui - added the "Update" to the menu, with three submenu items: Update R, Update R Packages, and Installing software. (thanks to Dason and Yihui Xie for their ideas and help)
   * shutdown - Shut down the operating system with the command `shutdown'.  A modified version of Yihui's shitdown function from the {fun} package (see: https://github.com/yihui/fun/blob/master/R/shutdown.R)
   * is.RStudio - checks if the current R session is running within RStudio or not.
   * is.Rgui - checks if the current R session is running within Rgui or not.
   * add.installr.GUI and remove.installr.GUI - for adding a menu system to Rgui

UPDATED FUNCTIONS:
   * install.URL - 
      * added a "wait" parameter with default as F (it now means that R doesn't wait for the installation of the software to finish before it releases the console).  And also "..." with access to the shell command run.
      * Made sure that if keep_install_file = FALSE then wait= TRUE (since otherwise, we'll erase the file before we get to run it)
      * output now returns TRUE/FLASE on whether the installation worked or not.
   * install.?? - now returns TRUE/FLASE on whether to installation worked or not.
   * install.R - Now uses MD5sums to check the newly installed R has all of the files it should.
   * updateR - 
      * added a menu based GUI!